# macke-opt-llvm

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md
examples/: CMakeLists.txt  assertions.c  divisible.c  funcptr.c  greetings.c  klee_objsize.c  klee_stacktrace.c  klee_symmain.c
ktest/: a=1,b=0.ktest  i=-1.ktest  i=0.ktest  i=42.ktest  p=struct.ktest  str=Hi.ktest
lib/: Arch64or32bit.cpp  Arch64or32bit.h  CMakeLists.txt  ChangeEntryPoint.cpp  Compat.cpp  Compat.h  Constants.h  DirectoryHelper.cpp  DirectoryHelper.h  DotInternalCallgraph.cpp  EncapsulateLibfuzzer.cpp  EncapsulateSymbolic.cpp  ExtractCallgraph.cpp  ExtractLinesOfCode.cpp  FunctionDeclarations.cpp  FunctionDeclarations.h  FunctionDefinitions.cpp  FunctionDefinitions.h  FunctionInternalAttributes.cpp  ListAllFuncsTopologic.cpp  MackeKTest.cpp  MackeKTest.h  PrependError.cpp  SimpleKTestTool.cpp
lib/ExtractCallgraph/: CMakeLists.txt  ExtractCallgraph.cpp
lib/ListAllFunctions/: CMakeLists.txt  ListAllFunctions.cpp
tests/: IntegrationTest.py  test_ChangeEntryPoint.py  test_EncapsulateSymbolic.py  test_ExtractCallgraph.py  test_ExtractLinesOfCode.py  test_Integration.py  test_ListAllFuncsTopologic.py  test_ListAllFunctions.py  test_PointerLogic.py  test_PrependError.py  test_SimpleKTestTool.py  test_Stacktrace.py
